--- a/web/static/css/mobile-nav.css
+++ b/web/static/css/mobile-nav.css
@@ -75,9 +75,10 @@
 }
 
 .mobile-nav-logo {
-  font-size: 1.5rem;
+  font-family: 'Times New Roman', 'Georgia', serif;
+  font-size: 1.8rem;
   font-weight: 700;
-  color: #DCD5B9;
+  color: #666666 !important;
   text-decoration: none;
 }
 
